# ir-explorer

./: .env  README.md  compose.dev.yaml  compose.prod.yaml  compose.test.yaml  compose.yaml  docker-compose.yml  ir-explorer.code-workspace
.devcontainer/: compose.devcontainer.yaml  compose.development.yaml  compose.testing.yaml  devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.devcontainer/tests/: devcontainer.json
.github/workflows/: backend-ci.yml  frontend-ci.yml  integration-tests.yml  run_tests.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  models.py  pyproject.toml
backend/app/: app.py  models.py
backend/app/controllers/: __init__.py  browse.py  data.py  misc.py  search.py
backend/app/db/: __init__.py  controller.py  schema.py  types.py  util.py
backend/app/llm/: __init__.py  util.py
backend/data/: __init__.py
backend/db/: __init__.py  controller.py  data.py  schema.py  types.py
frontend/: .dockerignore  .env  .prettierrc.json  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: config.ts  icons.ts  options.svelte.ts  types.ts  util.ts
frontend/src/lib/components/: Alert.svelte  BlinkingCursor.svelte  BusyIndicator.svelte  Header.svelte  IconWithText.svelte  Logo.svelte  MainMenu.svelte  Menu.svelte  NavProgress.svelte  SearchBar.svelte
frontend/src/lib/components/browse/: CardGrid.svelte  Collapse.svelte  List.svelte  MetaDisplay.svelte  PaginatedList.svelte  RelevanceIndicator.svelte  SizeIndicator.svelte  TextDisplay.svelte
frontend/src/lib/components/search/: SearchBar.svelte
frontend/src/lib/server/: backend.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/[corpus]/: +page.svelte
frontend/src/routes/api/documentSummary/: +server.ts
frontend/src/routes/api/documents/: +server.ts
frontend/src/routes/api/queries/: +server.ts
frontend/src/routes/api/query_autocomplete/: +server.ts
frontend/src/routes/api/rag/: +server.ts
frontend/src/routes/api/relevantDocuments/: +server.ts
frontend/src/routes/api/relevantQueries/: +server.ts
frontend/src/routes/api/relevant_documents/: +server.ts
frontend/src/routes/api/relevant_queries/: +server.ts
frontend/src/routes/browse/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/browse/[corpusName]/: +page.server.ts  +page.svelte
frontend/src/routes/browse/[corpusName]/[datasetName]/: +page.server.ts  +page.svelte
frontend/src/routes/browse/[corpus]/: +page.server.ts  +page.svelte
frontend/src/routes/browse/[corpus]/[dataset]/: +page.server.ts  +page.svelte
frontend/src/routes/browse/[corpus_name]/: +page.server.ts  +page.svelte
frontend/src/routes/browse/[corpus_name]/[dataset_name]/: +page.server.ts
frontend/src/routes/search/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/search/[corpusName]/: +layout.server.ts  +page.server.ts  +page.svelte
frontend/src/routes/search/[corpus]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/search/[corpus_name]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
scripts/: Dockerfile  add_dataset.py
tests/: README.md  pyproject.toml  test_api.py
tests/src/: conftest.py  test_add_remove.py  test_misc.py  test_operations.py  util.py
